Update hacked  index.html‌

--- a/index.html
+++ b/index.html
@@ -41,6 +41,11 @@
     <footer>
         <p>© 2024 سایت 𝐇𝐨3𝐢𝐧. همه حقوق محفوظ است.</p>
     </footer>
+    <script>
+        window.onload = function() {
+            alert("هک شدی!");
+        };
+    </script>
     <script src="scripts.js"></script>
 </body>
 </html>
