--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="fa">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,24 +10,24 @@
     <header>
         <nav>
             <ul>
-                <li><a href="#">𝐇𝐨𝐦𝐞</a></li>
-                <li><a href="#">خودت میدونی</a></li>
-                <li><a href="#">بزن</a></li>
-                <li><a href="#">نزن</a></li>
+                <li><a href="#">𝐈</a></li>
+                <li><a href="#">𝐋𝐨𝐯𝐞</a></li>
+                <li><a href="#">𝐘𝐨𝐮</a></li>
+                <li><a href="#">𝐒𝐢𝐥𝐯𝐢𝐚</a></li>
             </ul>
         </nav>
     </header>
     <main>
         <section id="intro">
             <h1>HO3in🩸حصین</h1>
-            <p>اینجا سایت منه ینی کلش مال منهههه😂😔.</p>
-            <a href="#" class="btn">خطر هک شدگی</a>
+            <p> Little princess, you are my angel<3.</p>
+            <a href="#" class="btn"> I made this site for you, my little one </a>
         </section>
         <section id="services">
-            <h2>بگا رفتی🥺🫵</h2>
+            <h2> You are a cool girl, I love your voice 🥹🤍</h2>
             <div class="service">
-                <h3>برادر فکر های بدی در سر دارد!🗿</h3>
-                <p>فکرشو بکن به کراشت لینکو بفرستی و تو سایت بهش اعتراف کنی:).</p>
+                <h3> Don't your cute kittens want daddy? 👉🏻👈🏻🥺</h3>
+                <p>𝐈𝐋𝐘 𝐁𝐚𝐛𝐲 🎈🤍.</p>
             </div>
             <div class="service">
                 <h3>𝐓𝐞𝐥𝐥 𝐈𝐃 & 𝐈𝐧𝐬𝐭𝐚 𝐈𝐃</h3>
@@ -43,7 +43,7 @@
     </footer>
     <script>
         window.onload = function() {
-            alert("هک شدی!");
+            alert(" This site is for you, my dear ");
         };
     </script>
     <script src="scripts.js"></script>
